--- a/views/contact.html
+++ b/views/contact.html
@@ -14,7 +14,7 @@
            <!-- Navigation Bar Start  -->
            <nav>
          
-            <h1 class="Logo">My Bites</h1>
+            <h1 class="logo">My Bites</h1>
                
                <ul class="links">
                    <li><a href="#">Home</a></li>
@@ -34,15 +34,18 @@
                     <h3>Send us a message</h3>
                     <form>
                         <div class="form-group">
-                            <input type="text" name="name" placeholder="Your Name">
+                            <label for="username">User Name</label>
+                            <input type="text" name="name" placeholder="Your Name" id="username">
                         </div>
 
                         <div class="form-group">
-                            <input type="email" name="email" placeholder="Your Email">
+                            <label for="email">Email Address</label>
+                            <input type="email" id="email" name="email" placeholder="Your Email">
                         </div>
 
                         <div class="form-group">
-                            <textarea name="message" placeholder="Your Message" id=""></textarea>
+                            <label for="message">Message : </label>
+                            <textarea name="message" placeholder="Your Message" id="message"></textarea>
                         </div>
 
                         <button type="submit">Send Message</button>
